--- a/en_US.ISO8859-1/htdocs/releases/9.3R/relnotes.html
+++ b/en_US.ISO8859-1/htdocs/releases/9.3R/relnotes.html
@@ -322,7 +322,48 @@
 		  DK Hostmaster A/S)</span></p><p xmlns="http://www.w3.org/TR/xhtml1/transitional">The <a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=xz&amp;sektion=1"><span class="citerefentry"><span class="refentrytitle">xz</span>(1)</span></a> utility has been updated
 	to a post-5.0.5 snapshot. <a href="http://svn.freebsd.org/viewvc/base?view=revision&amp;revision=263286">[r263286]</a></p><p xmlns="http://www.w3.org/TR/xhtml1/transitional"><span xmlns="http://www.w3.org/1999/xhtml" class="application">OpenSSH</span> has
 	been updated to version 6.6p1. <a href="http://svn.freebsd.org/viewvc/base?view=revision&amp;revision=263970">[r263970]</a></p><p xmlns="http://www.w3.org/TR/xhtml1/transitional"><span xmlns="http://www.w3.org/1999/xhtml" class="application">OpenSSL</span> has
-	been updated to version 0.9.8za. <a href="http://svn.freebsd.org/viewvc/base?view=revision&amp;revision=267285">[r267285]</a></p></div><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="releng"></a>2.5. Release Engineering and Integration</h3></div></div></div><p xmlns="http://www.w3.org/TR/xhtml1/transitional">As part of the release build, the
+	been updated to version 0.9.8za. <a href="http://svn.freebsd.org/viewvc/base?view=revision&amp;revision=267285">[r267285]</a></p></div><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="ports"></a>2.5. Ports and Packages</h3></div></div></div><div xmlns="" class="important"><h3 class="admontitle">Important: </h3><p xmlns="http://www.w3.org/TR/xhtml1/transitional">Note to FreeBSD desktop users: please read this section
+	  carefully, especially before upgrading ports that
+	  depend on <span xmlns="http://www.w3.org/1999/xhtml" class="application">Xorg</span>. </p></div><p xmlns="http://www.w3.org/TR/xhtml1/transitional">In April 2014, the FreeBSD Ports collection switched to a
+	newer version of <span xmlns="http://www.w3.org/1999/xhtml" class="application">Xorg</span> that supports
+	<acronym xmlns="http://www.w3.org/1999/xhtml" class="acronym">KMS</acronym> (Kernel Mode Setting). </p><p xmlns="http://www.w3.org/TR/xhtml1/transitional">Users upgrading from earlier versions of FreeBSD 9.x or
+	FreeBSD 8.x should be aware of several things regarding
+	<span xmlns="http://www.w3.org/1999/xhtml" class="application">Xorg</span>: </p><p xmlns="http://www.w3.org/TR/xhtml1/transitional">
+	<div xmlns="http://www.w3.org/1999/xhtml" class="itemizedlist"><ul class="itemizedlist" style="list-style-type: disc; "><li class="listitem"><p xmlns="http://www.w3.org/TR/xhtml1/transitional">When applications are built from the FreeBSD Ports
+	      Collection or installed from the <code xmlns="http://www.w3.org/1999/xhtml" class="literal"><a class="link" href="https://lists.freebsd.org/pipermail/freebsd-announce/2014-July/001570.html" target="_top">new_xorg</a></code>
+	      <a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=pkg&amp;sektion=8"><span class="citerefentry"><span class="refentrytitle">pkg</span>(8)</span></a> repository, the newer, KMS-aware version of
+	      <span xmlns="http://www.w3.org/1999/xhtml" class="application">Xorg</span> is used. </p></li><li class="listitem"><p xmlns="http://www.w3.org/TR/xhtml1/transitional">The <acronym xmlns="http://www.w3.org/1999/xhtml" class="acronym">KMS</acronym> version of
+	      <span xmlns="http://www.w3.org/1999/xhtml" class="application">Xorg</span> does not switch back to
+	      text mode after leaving the X desktop environment, and
+	      the system console will not be visible.  The new
+	      <a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=vt&amp;sektion=4"><span class="citerefentry"><span class="refentrytitle">vt</span>(4)</span></a> console driver supports graphic consoles and
+	      keeps the console visible after X has exited.  The
+	      <a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=vt&amp;sektion=4"><span class="citerefentry"><span class="refentrytitle">vt</span>(4)</span></a> driver must be compiled into the kernel.
+	      A <code xmlns="http://www.w3.org/1999/xhtml" class="filename">VT</code> kernel configuration example
+	      file is included in 9.3-RELEASE, but is not
+	      compiled or enabled by default.  See <a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=vt&amp;sektion=4"><span class="citerefentry"><span class="refentrytitle">vt</span>(4)</span></a> and the
+	      <a xmlns="http://www.w3.org/1999/xhtml" class="link" href="https://wiki.freebsd.org/VT" target="_top">vt(4) wiki
+		page</a> for additional information. </p></li><li class="listitem"><p xmlns="http://www.w3.org/TR/xhtml1/transitional">The older <span xmlns="http://www.w3.org/1999/xhtml" class="application">Xorg</span> that does
+	      not support <acronym xmlns="http://www.w3.org/1999/xhtml" class="acronym">KMS</acronym> can still be
+	      installed from the <code xmlns="http://www.w3.org/1999/xhtml" class="literal">latest</code> upstream
+	      <a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=pkg&amp;sektion=8"><span class="citerefentry"><span class="refentrytitle">pkg</span>(8)</span></a> repository and the packages included on the
+	      9.3-RELEASE DVD. </p><p xmlns="http://www.w3.org/TR/xhtml1/transitional">However, it is important to note that some newer
+	      applications require the newer
+	      <span xmlns="http://www.w3.org/1999/xhtml" class="application">Xorg</span>, and will not work with
+	      the old version.  The newer
+	      <span xmlns="http://www.w3.org/1999/xhtml" class="application">Xorg</span> is recommended, and
+	      should be used unless not compatible with legacy
+	      graphics cards. </p><p xmlns="http://www.w3.org/TR/xhtml1/transitional">To continue using the old version of
+	      <span xmlns="http://www.w3.org/1999/xhtml" class="application">Xorg</span> when building from the
+	      FreeBSD Ports Collection, set
+	      <code xmlns="http://www.w3.org/1999/xhtml" class="literal">WITHOUT_NEW_XORG=yes</code> in
+	      <a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=make.conf&amp;sektion=5"><span class="citerefentry"><span class="refentrytitle">make.conf</span>(5)</span></a>. </p><p xmlns="http://www.w3.org/TR/xhtml1/transitional">Packages for <span xmlns="http://www.w3.org/1999/xhtml" class="application">KDE4</span> are not
+	      available in the default (<code xmlns="http://www.w3.org/1999/xhtml" class="literal">latest</code>)
+	      <a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=pkg&amp;sektion=8"><span class="citerefentry"><span class="refentrytitle">pkg</span>(8)</span></a> repository, however are available in the
+	      <code xmlns="http://www.w3.org/1999/xhtml" class="literal">new_xorg</code> repository.  See the <a xmlns="http://www.w3.org/1999/xhtml" class="link" href="https://lists.freebsd.org/pipermail/freebsd-announce/2014-July/001570.html" target="_top">announcement
+		email</a> for details on how to use the
+	      <code xmlns="http://www.w3.org/1999/xhtml" class="literal">new_xorg</code> repository. </p></li></ul></div>
+       </p></div><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="releng"></a>2.6. Release Engineering and Integration</h3></div></div></div><p xmlns="http://www.w3.org/TR/xhtml1/transitional">As part of the release build, the
 	<a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=etcupdate&amp;sektion=8"><span class="citerefentry"><span class="refentrytitle">etcupdate</span>(8)</span></a> utility will bootstrap the system, allowing
 	<a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=etcupdate&amp;sektion=8"><span class="citerefentry"><span class="refentrytitle">etcupdate</span>(8)</span></a> to work after the first upgrade of a
 	system. <a href="http://svn.freebsd.org/viewvc/base?view=revision&amp;revision=260891">[r260891]</a></p><p xmlns="http://www.w3.org/TR/xhtml1/transitional">The <code xmlns="http://www.w3.org/1999/xhtml" class="filename">release.sh</code>
@@ -334,7 +375,7 @@
 	been updated to support multiple byte orders.  Similar to
 	<a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=cap_mkdb&amp;sektion=1"><span class="citerefentry"><span class="refentrytitle">cap_mkdb</span>(1)</span></a>, the <code xmlns="http://www.w3.org/1999/xhtml" class="filename">services.db</code> will
 	be created with proper endinanness as part of
-	cross-architecture release builds. <a href="http://svn.freebsd.org/viewvc/base?view=revision&amp;revision=263028">[r263028]</a></p></div></div><div class="sect1"><div xmlns="" class="titlepage"><div><div><h2 xmlns="http://www.w3.org/1999/xhtml" class="title" style="clear: both"><a id="upgrade"></a>3. Upgrading from Previous Releases of FreeBSD</h2></div></div></div><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="idp62753568"></a>3.1. Upgrading Using <a class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=freebsd-update&amp;sektion=8"><span class="citerefentry"><span class="refentrytitle">freebsd-update</span>(8)</span></a> or a Source-Based
+	cross-architecture release builds. <a href="http://svn.freebsd.org/viewvc/base?view=revision&amp;revision=263028">[r263028]</a></p></div></div><div class="sect1"><div xmlns="" class="titlepage"><div><div><h2 xmlns="http://www.w3.org/1999/xhtml" class="title" style="clear: both"><a id="upgrade"></a>3. Upgrading from Previous Releases of FreeBSD</h2></div></div></div><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="idp62830112"></a>3.1. Upgrading Using <a class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=freebsd-update&amp;sektion=8"><span class="citerefentry"><span class="refentrytitle">freebsd-update</span>(8)</span></a> or a Source-Based
 	Procedure</h3></div></div></div><p xmlns="http://www.w3.org/TR/xhtml1/transitional">[amd64,i386] Binary upgrades between RELEASE versions
 	(and snapshots of the various security branches) are supported
 	using the <a xmlns="http://www.w3.org/1999/xhtml" class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=freebsd-update&amp;sektion=8"><span class="citerefentry"><span class="refentrytitle">freebsd-update</span>(8)</span></a> utility.  The binary upgrade
@@ -348,7 +389,7 @@
 	<code xmlns="http://www.w3.org/1999/xhtml" class="filename">/usr/src/UPDATING</code>. </p><p xmlns="http://www.w3.org/TR/xhtml1/transitional">For more specific information about upgrading
 	instructions, see <code xmlns="http://www.w3.org/1999/xhtml" class="uri"><a class="uri" href="http://www.FreeBSD.org/releases/9.3R/installation.html" target="_top">http://www.FreeBSD.org/releases/9.3R/installation.html</a></code>. </p><div xmlns="" class="important"><h3 class="admontitle">Important: </h3><p xmlns="http://www.w3.org/TR/xhtml1/transitional">Upgrading FreeBSD should only be attempted
 	  after backing up <span xmlns="http://www.w3.org/1999/xhtml" class="emphasis"><em>all</em></span> data and
-	  configuration files. </p></div></div><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="idp62770592"></a>3.2. User-Visible
+	  configuration files. </p></div></div><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="idp62847008"></a>3.2. User-Visible
 	Incompatibilities</h3></div></div></div><p xmlns="http://www.w3.org/TR/xhtml1/transitional">FreeBSD 9.0 and later versions have several
 	configuration incompatibilities with earlier versions of FreeBSD.
 	These differences are best understood before upgrading.
